# walnut

./: .clang-format  .gitignore  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt
sandbox/src/: main.c
test/: CMakeLists.txt
test/src/: main.c
walnut/: CMakeLists.txt
walnut/include/walnut/: debug.h  decode.h  disassembler.h  mem.h  opcode.h  walnut.h
walnut/include/walnut/assembler/: assembler.h  lexer.h
walnut/src/: debug.c  disassembler.c  mem.c  vm.c  walnut.c
walnut/src/assembler/: assembler.c  lexer.c
walnutApp/: CMakeLists.txt
walnutApp/src/: main.c
